fix reference error

--- a/view/about.html
+++ b/view/about.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About the Incline | Duquesne Incline</title>
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="../static/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
         rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/static/script.js" defer></script>
+    <script src="../static/script.js" defer></script>
 </head>
 
 <body>
@@ -17,13 +17,13 @@
         <header>
             <div class="logo">
                 <h1>Duquesne Incline</h1>
-                <img src="/static/DuqInclineLogo.png" alt="Logo" />
+                <img src="../static/DuqInclineLogo.png" alt="Logo" />
             </div>
             <nav>
                 <a href="../index.html">Home</a>
-                <a href="/view/things_to_do.html">Things To Do</a>
-                <a href="/view/gift_shop.html">Gift Shop</a>
-                <a href="/view/about.html">About the Incline</a>
+                <a href="./things_to_do.html">Things To Do</a>
+                <a href="./gift_shop.html">Gift Shop</a>
+                <a href="./about.html">About the Incline</a>
                 <a href="#" class="btn">Book a tour!</a>
             </nav>
         </header>
@@ -174,16 +174,16 @@
 
         <footer>
             <div>
-                <h1>Duquesne Incline</h1>
-                <nav>
-                    <a href="index.html">Home</a>
-                    <a href="/view/things_to_do.html">Things to Do</a>
-                    <a href="/view/gift_shop.html">Gift Shop</a>
-                    <a href="/view/about.html">About the Incline</a>
-                </nav>
-                <p>Copyright @2025 Duquesne Incline - All rights Reserved</p>
+              <h1>Duquesne Incline</h1>
+              <nav>
+                <a href="../index.html">Home</a>
+                <a href="./things_to_do.html">Things to Do</a>
+                <a href="./gift_shop.html">Gift Shop</a>
+                <a href="./about.html">About the Incline</a>
+              </nav>
+              <p>Copyright @2025 Duquesne Incline - All rights Reserved</p>
             </div>
-        </footer>
+          </footer>
     </div>
 </body>
 
