--- a/view/things_to_do.html
+++ b/view/things_to_do.html
@@ -4,24 +4,24 @@
 <head>
   <meta charset="UTF-8" />
   <title>Things To Do</title>
-  <link rel="stylesheet" href="/static/style.css" />
+  <link rel="stylesheet" href="../static/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
     rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="/static/script.js" defer></script>
+  <script src="../static/script.js" defer></script>
 </head>
 
 <body>
   <header>
     <div class="logo">
       <h1>Duquesne Incline</h1>
-      <img src="/static/DuqInclineLogo.png" alt="Logo" />
+      <img src="../static/DuqInclineLogo.png" alt="Logo" />
     </div>
     <nav>
       <a href="../index.html">Home</a>
-      <a href="/view/things_to_do.html">Things To Do</a>
-      <a href="/view/gift_shop.html">Gift Shop</a>
-      <a href="/view/about.html">About the Incline</a>
+      <a href="./things_to_do.html">Things To Do</a>
+      <a href="./gift_shop.html">Gift Shop</a>
+      <a href="./about.html">About the Incline</a>
       <a href="#" class="btn">Book a tour!</a>
     </nav>
   </header>
@@ -77,19 +77,19 @@
         
         <div class="carousel">
           <div class="slide active">
-            <img src=".././static/Down_town.jpg" alt="Activity after incline visit">
+            <img src="../static/Down_town.jpg" alt="Activity after incline visit">
             <h3>Downtown</h3>
           </div>
           <div class="slide">
-            <img src=".././static/Station_square.png" alt="Activity after incline visit">
+            <img src="../static/Station_square.png" alt="Activity after incline visit">
             <h3>Station Square</h3>
           </div>
           <div class="slide">
-            <img src=".././static/North_shore.jpg" alt="Activity after incline visit">
+            <img src="../static/North_shore.jpg" alt="Activity after incline visit">
             <h3>North Shore</h3>
           </div>
           <div class="slide">
-            <img src=".././static/Mount_washinton.png" alt="Activity after incline visit">
+            <img src="../static/Mount_washinton.png" alt="Activity after incline visit">
             <h3>Mount Washington Viewpoint</h3>
           </div>
         </div>
@@ -193,10 +193,10 @@
     <div>
       <h1>Duquesne Incline</h1>
       <nav>
-        <a href=".././index.html">Home</a>
-        <a href="things_to_do.html">Things to Do</a>
-        <a href="gift_shop.html">Gift Shop</a>
-        <a href="about.html">About the Incline</a>
+        <a href="../index.html">Home</a>
+        <a href="./things_to_do.html">Things to Do</a>
+        <a href="./gift_shop.html">Gift Shop</a>
+        <a href="./about.html">About the Incline</a>
       </nav>
       <p>Copyright @2025 Duquesne Incline - All rights Reserved</p>
     </div>
