Small style fixes

--- a/view/things_to_do.html
+++ b/view/things_to_do.html
@@ -36,7 +36,7 @@
 
     <section>
       <img src="../static/pitt_night.png"
-        alt="Featured view of Pittsburgh" class="featured-image" />
+        alt="Featured view of Pittsburgh" class="featured-image">
       <p class = "feature">Photo courtesy of "thrillist"</p>
     </section>
 
