--- a/view/about.html
+++ b/view/about.html
@@ -17,7 +17,7 @@
         <header>
             <div class="logo">
                 <h1>Duquesne Incline</h1>
-                <img src="../static/DuqInclineLogo.png" alt="Logo" />
+                <img src="../static/DuqInclineLogo.png" alt="Logo">
             </div>
             <nav>
                 <a href="../index.html">Home</a>
@@ -135,7 +135,7 @@
                 <div class="right-column">
                     <div class="history-image">
                         <img src="../static/history.png"
-                            alt="Duquesne Incline Historical Photo" />
+                            alt="Duquesne Incline Historical Photo">
                         <p class="creds">Photo courtesy of "Mike Druckenbrod" on Flickr</p>
                     </div>
 
