--- a/view/gift_shop.html
+++ b/view/gift_shop.html
@@ -15,7 +15,7 @@
     <header>
         <div class="logo">
             <h1>Duquesne Incline</h1>
-            <img src="../static/DuqInclineLogo.png" alt="Logo" />
+            <img src="../static/DuqInclineLogo.png" alt="Logo">
         </div>
         <nav>
             <a href="../index.html">Home</a>
@@ -29,7 +29,7 @@
     <main>
         <section class="gift-shop-container">
             <div class="gift-shops">
-                <img src="../static/font_page.jpg" alt="Gift Shop Interior" class="gift-shop-title-image" />
+                <img src="../static/font_page.jpg" alt="Gift Shop Interior" class="gift-shop-title-image">
                 <div class="gift-titles">
                     <h2>Gift Shop</h2>
                     <p>We offer many one of a kind items that were custom made for the Incline</p>
@@ -47,7 +47,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="../static/glasses.jpg" alt="Shot Glasses" class="product-image" />
+                    <img src="../static/glasses.jpg" alt="Shot Glasses" class="product-image">
                     <div class="creds">
                         <p>Photo courtesy of "Duquesne Incline Gift Shop"</p>
                     </div>
@@ -56,7 +56,7 @@
 
             <article class="product-item reverse">
                 <div>
-                    <img src="../static/ornaments.jpg" alt="Ornament" class="product-image" />
+                    <img src="../static/ornaments.jpg" alt="Ornament" class="product-image">
                     <div class="creds">
                         <p>Photo courtesy of "Duquesne Incline Gift Shop"</p>
                     </div>
@@ -78,7 +78,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="../static/plates.jpg" alt="Metal Plates" class="product-image" />
+                    <img src="../static/plates.jpg" alt="Metal Plates" class="product-image">
                     <div class="creds">
                         <p>Photo courtesy of "Duquesne Incline Gift Shop"</p>
                     </div>
