--- a/view/things_to_do.html
+++ b/view/things_to_do.html
@@ -93,7 +93,7 @@
             <h3>Mount Washington Viewpoint</h3>
           </div>
         </div>
-        <button class="next-btn">&lt</button>
+        <button class="next-btn">&gt</button>
       </div>
       <div class="creds">
         <p class="active"> Photo courtesy of "Urban Redevlopment Authority of Pittsburgh"</p>
