--- a/static/style.css
+++ b/static/style.css
@@ -196,7 +196,7 @@ h4 {
 /* Embeded Video Section */
 #video-section {
     text-align: center;
-    margin: 60px 0;
+    margin: 60px;
 }
 
 .video-container {
@@ -219,13 +219,16 @@ h4 {
     padding-left: 0;
 }
 
-.faq {
-    margin-top: 20px;
-    font-size: 24px;
-    color: #000;
-    font-weight: 400;
-    line-height: 35px;
+.faq-item h3{
+    font-size: 32px;
+    margin-bottom:10px;
 }
+.faq-item {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    font-size: 24px;
+}
+
 
 /* Cards Layout */
 .cards {
