--- a/static/style.css
+++ b/static/style.css
@@ -96,6 +96,12 @@ h4 {
     font-weight: 700;
 }
 
+.main-contact {
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
 .btn.lg {
     display: inline-block;
     margin-top: 40px;
@@ -105,11 +111,10 @@ h4 {
     margin-bottom: 30px;
 }
 
-#mainpart img {
+.mainpart img {
     width: 100%;
     margin-left: -40px;
     border-radius: 8px;
-    margin-top: 70px;
     align-items: center;
 }
 
