--- a/view/gift_shop.html
+++ b/view/gift_shop.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- Header: Contains logo and main navigation -->
     <header>
         <div class="logo">
             <h1>Duquesne Incline</h1>
@@ -26,7 +27,9 @@
         </nav>
     </header>
 
+    <!-- Main: Contains the main content of the page -->
     <main>
+        <!--Gift shop introduction with banner image -->
         <section class="gift-shop-container">
             <div class="gift-shops">
                 <img src="../static/font_page.jpg" alt="Gift Shop Interior" class="gift-shop-title-image">
@@ -38,6 +41,7 @@
             </div>
         </section>
 
+        <!-- Product showcase section: Displays featured items -->
         <section>
             <article class="product-item">
                 <div class="product-info">
@@ -86,6 +90,7 @@
             </article>
         </section>
 
+        <!-- Additional products highlight section -->
         <section class="highlight-section">
             <p class="highlight-text">
                 All types of pictures framed and unframed<br />
@@ -96,18 +101,19 @@
         </section>
     </main>
 
+    <!-- Footer: Contains site navigation and copyright information -->
     <footer>
         <div>
-          <h1>Duquesne Incline</h1>
-          <nav>
-            <a href="../index.html">Home</a>
-            <a href="./things_to_do.html">Things to Do</a>
-            <a href="./gift_shop.html">Gift Shop</a>
-            <a href="./about.html">About the Incline</a>
-          </nav>
-          <p>Copyright @2025 Duquesne Incline - All rights Reserved</p>
+            <h1>Duquesne Incline</h1>
+            <nav>
+                <a href="../index.html">Home</a>
+                <a href="./things_to_do.html">Things to Do</a>
+                <a href="./gift_shop.html">Gift Shop</a>
+                <a href="./about.html">About the Incline</a>
+            </nav>
+            <p>Copyright @2025 Duquesne Incline - All rights Reserved</p>
         </div>
-      </footer>
+    </footer>
 </body>
 
 </html>
